# DLIB_FOR_ANDROID

./: .gitignore  README.md
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/java/com/tangluo/dlib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: detector.h  dlibtest.cpp  dutil.h  jni_face_detect.cpp  jni_face_recognize.cpp  native-lib.cpp  recognition.h
app/src/main/cpp/jni_common/: jni_bitmap2array2d.cpp  jni_bitmap2array2d.h  jni_common.h  jni_imageutils.cpp  jni_utils.cpp
app/src/main/java/com/tangluo/dlib/: MainActivity.java
app/src/main/java/com/tangluo/dlib/demo/: AutoFitTextureView.java  DetectorActivity.java  TrackerActivity.java
app/src/main/java/com/tangluo/dlib/natives/: Constants.java  FaceDetector.java  FaceRecognition.java  ImageUtils.java  VisionDetectRect.java
app/src/main/res/drawable/: btn_selector.xml  btn_shape.xml
app/src/main/res/layout/: activity_detector.xml  activity_main.xml  camera_view.xml  popupwindow.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/java/com/tangluo/dlib/: ExampleUnitTest.java
